[project]
name = "symphonicseal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "platformdirs>=4.3.7",
    "spacy>=3.8.5",
    "tqdm>=4.67.1",
]

[project.scripts]
symphonicseal = "symphonicseal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
